syntax = "proto3";

package org.tasks.grpc;

option java_package = "org.tasks";
option java_outer_classname = "GrpcProto";

enum ListItemType {
  Header = 0;
  Item = 1;
}

message UiItem {
  ListItemType type = 1;
  uint64 id = 2;
  string title = 3;
  bool completed = 4;
  uint32 priority = 5;
  bool repeating = 6;
  bool collapsed = 7;
  bool hidden = 8;
  uint32 indent = 9;
  uint32 numSubtasks = 10;
  optional string timestamp = 11;
}

message Tasks {
  uint32 totalItems = 1;
  repeated UiItem items = 2;
}

message GetTasksRequest {
  uint32 position = 1;
  uint32 limit = 2;
  optional string filter = 3;
  bool showHidden = 4;
  bool showCompleted = 5;
  repeated uint64 collapsed = 6;
  optional int32 sortMode = 7;
  optional int32 groupMode = 8;
}
message CompleteTaskRequest {
  uint64 id = 1;
  bool completed = 2;
}
message CompleteTaskResponse { bool success = 1; }

message ToggleGroupRequest {
  uint64 value = 1;
  bool collapsed = 2;
}
message ToggleGroupResponse {}

message ListItem {
  ListItemType type = 1;
  string id = 2;
  string title = 3;
  string icon = 4;
  uint32 color = 5;
  uint32 taskCount = 6;
}

message GetListsRequest {
  uint32 position = 1;
  uint32 limit = 2;
}
message GetListsResponse {
  uint32 totalItems = 1;
  repeated ListItem items = 2;
}

message GetTaskRequest {
  uint64 taskId = 1;
}
message GetTaskResponse {
  string title = 1;
  bool completed = 2;
  bool repeating = 3;
  uint32 priority = 4;
  string description = 5;
}

message SaveTaskRequest {
  uint64 taskId = 1;
  string title = 2;
  bool completed = 3;
  optional string filter = 4;
}
message SaveTaskResponse {
  uint64 taskId = 1;
}

message GetTaskCountRequest {
  optional string filter = 1;
  bool showHidden = 2;
  bool showCompleted = 3;
}
message GetTaskCountResponse {
  uint32 count = 1;
  uint32 completedCount = 2;
}

message GetVersionRequest {}
message GetVersionResponse { int32 versionCode = 1; }

service WearService {
  rpc getTasks(GetTasksRequest) returns (Tasks);
  rpc completeTask(CompleteTaskRequest) returns (CompleteTaskResponse);
  rpc toggleSubtasks(ToggleGroupRequest) returns (ToggleGroupResponse);
  rpc getLists(GetListsRequest) returns (GetListsResponse);
  rpc getTask(GetTaskRequest) returns (GetTaskResponse);
  rpc saveTask(SaveTaskRequest) returns (SaveTaskResponse);
  rpc getTaskCount(GetTaskCountRequest) returns (GetTaskCountResponse);
  rpc getVersion(GetVersionRequest) returns (GetVersionResponse);
}
